--- a/kubernetes/apps/default/mailu/config/secret.sops.yaml
+++ b/kubernetes/apps/default/mailu/config/secret.sops.yaml
@@ -4,13 +4,13 @@ metadata:
     name: mailu-secret
     namespace: default
 type: Opaque
-stringData:
-    roundcube-password: ENC[AES256_GCM,data:k7S3eIYH4kfyYIFGe5I=,iv:JgMOvqZoFIDEeh6J8svNhUyajgYdA1aNOb+T9wcvNYI=,tag:k0r/4jdRIe1jlFXrY2Eh5Q==,type:str]
-    secret-key: ENC[AES256_GCM,data:0tbW/YlsMLPb8Ud4NmU=,iv:7ha0kHe9JVI1JRXj6Qs3a1d6MinZ6XwZ5chrT8kqJDs=,tag:xYZoVCG4upRSc7CbKI2j2g==,type:str]
-    user-password: ENC[AES256_GCM,data:PuvcDGGS6khI,iv:1bdEVBt5C7c4Y9Eh30AUmjHMF7xAlQ/OeaLKiI3rNic=,tag:FPBt/+Hf5DW1jWl2RIctGw==,type:str]
-    mariadb-root-password: ENC[AES256_GCM,data:XfRPo+YGlMNPHKgoluc=,iv:LEol8mmohr6uIjKO5Z8pqTKoxr1r4eQQqcvD6vqYSeQ=,tag:zhjRt86hps+BL9QDpIESlQ==,type:str]
-    mariadb-replication-password: ENC[AES256_GCM,data:EDwa979XLZCI76fAprc=,iv:z4Y4LC0n6TTHEfzaNLnGCtnn6YcHff+r1pJwoWt3vQ4=,tag:C5qwzUz60xR5Afs/1uJ6ow==,type:str]
-    mariadb-password: ENC[AES256_GCM,data:m7LRs6UDlBEn/hgKxL8=,iv:E+Z06F8ZFg53d3VWgTnfsU+5bkHSKc2JXGYUnT9rn9I=,tag:cxqwWBpmqem+gWpITBlPUQ==,type:str]
+data:
+    roundcube-password: ENC[AES256_GCM,data:U2Km4z+t8a4gQbhaxbfKfUdev3k=,iv:OPgJMPzRNCPBv6nvUzHHwCoRLgjJmRFnJGEsp+srXnk=,tag:KnSkhih3ANIaCSCwyZwvug==,type:str]
+    secret-key: ENC[AES256_GCM,data:SKnf5WLqMXe8VZWWVoLIVBJGkJo=,iv:X0Ll2TG1TdNplv2koOprVKh7WAxkhJQvF8yKLRuCqnA=,tag:pMQ1Y92aSos3RgXwWGqcQg==,type:str]
+    user-password: ENC[AES256_GCM,data:iy6Y8eomWXp14Pp/XJIneg==,iv:LmU/7rR2mfNBrUzq/Kx08f6n1oLDYnMwXvsdVtwoR4Q=,tag:/e/GZTRcCrJYWS3Ws+Yx+g==,type:str]
+    mariadb-root-password: ENC[AES256_GCM,data:Lny+DiwqwSyJkWh6bNzXhrf1ewc=,iv:2rPQISgXt2sOvLKH52/6uTuMiB2eXLGHOh5QNEM0irw=,tag:g7CV1xOue/n+b228kpT3XQ==,type:str]
+    mariadb-replication-password: ENC[AES256_GCM,data:1FLolE7xh21sVViI0AxP77yQC+o=,iv:WxDjqn8iqA7wg2YkYQBxkmJ4Z+AfGE19cSIiH9vxhTs=,tag:Tp4EVDDLko+3qCxN4MyU4A==,type:str]
+    mariadb-password: ENC[AES256_GCM,data:RMV1yG9OCyX7J+h+ErbJlUtTCNA=,iv:LRgINHvUpmHUzeLznrlaihvJuX/Pmj+hI8iScOPhcI8=,tag:3tkP8FXTAQB+4groUPR0Xg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +26,8 @@ sops:
             R0E2QjFBRG90Ry9sOFAvSW1jSmhFd2cKsnyVZmejWVSRewJAdbj1RJw/my2zAQ8D
             33bxJ/SFIT0TIdKKyQN2A4nBagpO40JP6wXiH8d19fKAd07i4J3MUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-28T18:39:18Z"
-    mac: ENC[AES256_GCM,data:xn2577tEcHu85VOn59YbSuI5xLDXRtKdB5/VxIQIm2QIfD7f28Q2TOtAaTySRb9HragR8p/waAzyRCBNJJLHZcSPKHTwjhXm4TtgQ9PFfOOwiZG1vEkPqj6qt+c526p5NX27eyfhNDKOLoqIrtyYL93Y9VrSwbdfS4mD1iGHqek=,iv:x25e4+zrr0gvBEUGb1jmMLbGgdvT/6ZYB4qHxJM9WFY=,tag:vQNugSO3qKVc177/0muk5A==,type:str]
+    lastmodified: "2024-10-28T19:19:09Z"
+    mac: ENC[AES256_GCM,data:f5qcpsDhczSHlPKJNOPcpCSSw/jD7+h98yD7wp74iNRwftei9rwkU7Ht74AJFIayKxLAl05RiFT0p/uzYGRV1pZNR5eEiQDMh+50BdF61iHl3F9vEqRj0NkHY0IX3DEbSFs3i51Wqy2Zkj1y84URPmisGN9Ub5svL+w88QUN0MQ=,iv:4f7a40twywGxsuxGR3zpGSsrRf1FlG8LUVgTgF7Y+eE=,tag:SXvRMIthdJpKYCugT+fu/Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
