--- a/kubernetes/apps/default/mailu/config/secret.sops.yaml
+++ b/kubernetes/apps/default/mailu/config/secret.sops.yaml
@@ -4,13 +4,15 @@ metadata:
     name: mailu-secret
     namespace: default
 type: Opaque
-data:
-    roundcube-password: ENC[AES256_GCM,data:U2Km4z+t8a4gQbhaxbfKfUdev3k=,iv:OPgJMPzRNCPBv6nvUzHHwCoRLgjJmRFnJGEsp+srXnk=,tag:KnSkhih3ANIaCSCwyZwvug==,type:str]
-    secret-key: ENC[AES256_GCM,data:SKnf5WLqMXe8VZWWVoLIVBJGkJo=,iv:X0Ll2TG1TdNplv2koOprVKh7WAxkhJQvF8yKLRuCqnA=,tag:pMQ1Y92aSos3RgXwWGqcQg==,type:str]
-    user-password: ENC[AES256_GCM,data:iy6Y8eomWXp14Pp/XJIneg==,iv:LmU/7rR2mfNBrUzq/Kx08f6n1oLDYnMwXvsdVtwoR4Q=,tag:/e/GZTRcCrJYWS3Ws+Yx+g==,type:str]
-    mariadb-root-password: ENC[AES256_GCM,data:Lny+DiwqwSyJkWh6bNzXhrf1ewc=,iv:2rPQISgXt2sOvLKH52/6uTuMiB2eXLGHOh5QNEM0irw=,tag:g7CV1xOue/n+b228kpT3XQ==,type:str]
-    mariadb-replication-password: ENC[AES256_GCM,data:1FLolE7xh21sVViI0AxP77yQC+o=,iv:WxDjqn8iqA7wg2YkYQBxkmJ4Z+AfGE19cSIiH9vxhTs=,tag:Tp4EVDDLko+3qCxN4MyU4A==,type:str]
-    mariadb-password: ENC[AES256_GCM,data:RMV1yG9OCyX7J+h+ErbJlUtTCNA=,iv:LRgINHvUpmHUzeLznrlaihvJuX/Pmj+hI8iScOPhcI8=,tag:3tkP8FXTAQB+4groUPR0Xg==,type:str]
+stringData:
+    roundcube-password: ENC[AES256_GCM,data:mc//PWhlyPZBUhn5mWo=,iv:OJ75P25jvST4Nfy/iGnvFYypozAFjyGWR+MBoS0iRoA=,tag:5xprhpAZBNVLPg8ddtj1Cg==,type:str]
+    secret-key: ENC[AES256_GCM,data:AJDLCNBSm6VgXDJlQ64=,iv:81k22uzc3mQv+oo4auJeRJlsUfy5Frb2BvFC8uJUsnw=,tag:eesKOw4EKGzOtsQPxRFQaA==,type:str]
+    user-password: ENC[AES256_GCM,data:S99oCsxSLp/hkGP4u+c=,iv:MbzVtn5UamRO+TjIxGeBJVMux2SQNMgmcvuIR4nkYPM=,tag:D4cX8FE5gv+iC9lm1oj33Q==,type:str]
+    mariadb-root-password: ENC[AES256_GCM,data:g0LMRe26UVOUCNeEGUw=,iv:opdx9nGJPEtsjrfb7VIzjKCKiN+2+d4PgMAr2SKynjE=,tag:VKRoxXeSwnnOl+3MAw/6Og==,type:str]
+    mariadb-replication-password: ENC[AES256_GCM,data:zfthTeIljnHzsDgSsgU=,iv:AHhyWNWzcv2i+xk6amxc1SBxhj9yGnLAm/oiIlTUflY=,tag:ZY6qTKbbC9Bxhu3E0U3QbA==,type:str]
+    mariadb-password: ENC[AES256_GCM,data:bv4qyoLYul5Zc7RmIbc=,iv:iS+RREiovXHaaii+zsUVeGUNrHM1mbyz350N4UIdWWQ=,tag:gOb/8jZgk7lZBkUUhvBl+A==,type:str]
+    postgres-password: ENC[AES256_GCM,data:Vjv2D28aG6naBad0mOI=,iv:XySHYgv3onUpX+f/UfeYONpASMI8sQX34PkvufGXcA4=,tag:YGEri4Qi4hRd1Fw73SuAIQ==,type:str]
+    password: ENC[AES256_GCM,data:DSH89ezHKY/q9zDGemU=,iv:lxSE/1SO9XDG639asg/uqvRdOy+c+30LIGXHRafS9LE=,tag:GFN30yP94g4U0tqXzuAP/A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +28,8 @@ sops:
             R0E2QjFBRG90Ry9sOFAvSW1jSmhFd2cKsnyVZmejWVSRewJAdbj1RJw/my2zAQ8D
             33bxJ/SFIT0TIdKKyQN2A4nBagpO40JP6wXiH8d19fKAd07i4J3MUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-28T19:19:09Z"
-    mac: ENC[AES256_GCM,data:f5qcpsDhczSHlPKJNOPcpCSSw/jD7+h98yD7wp74iNRwftei9rwkU7Ht74AJFIayKxLAl05RiFT0p/uzYGRV1pZNR5eEiQDMh+50BdF61iHl3F9vEqRj0NkHY0IX3DEbSFs3i51Wqy2Zkj1y84URPmisGN9Ub5svL+w88QUN0MQ=,iv:4f7a40twywGxsuxGR3zpGSsrRf1FlG8LUVgTgF7Y+eE=,tag:SXvRMIthdJpKYCugT+fu/Q==,type:str]
+    lastmodified: "2024-10-28T22:24:16Z"
+    mac: ENC[AES256_GCM,data:evSFayTrGOnrNaYfRBh3UPIbbA3GKOofrek3+ldDxQVoYaXLAXfgoyqYSrFKVJx6bZdPA83e8PMaJZSJoxrgVpHFD4+dkwtoobw7WeTVWGXajXF3ql0Pz6Y7fvSjdGZTeLa0l401xv75uz9m0gSugT2oUnaXpXMsvbdgaoICNe4=,iv:LjGxN4mFy3VzC0wqsORnNbf20ERRuSv1qYodPKoDMa0=,tag:qsKk4kU+TPBuE8D8YbDm5g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
