--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -63,7 +63,7 @@ spec:
                 value: 1000
             image:
               repository: linuxserver/radarr
-              tag: 5.14.0
+              tag: nightly-version-5.15.0.9397
             probes:
               liveness:
                 enabled: true
