Update doplarr to use overseerr

--- a/kubernetes/apps/default/doplarr/doplarr.yaml
+++ b/kubernetes/apps/default/doplarr/doplarr.yaml
@@ -24,27 +24,34 @@ spec:
           doplarr:
             env:
               DISCORD__REQUESTED_MSG_STYLE: :embed
-              RADARR__API:
+              OVERSEERR__URL: http://overseerr:5055
+              OVERSEERR__API:
                 valueFrom:
                   secretKeyRef:
-                    key: APIKEY
-                    name: radarr-secret
-              RADARR__QUALITY_PROFILE: HD - 720p/1080p
-              RADARR__ROOTFOLDER: /data/media/movies
-              RADARR__URL: http://radarr:7878
-              SONARR__API:
-                valueFrom:
-                  secretKeyRef:
-                    key: APIKEY
-                    name: sonarr-apikey
-              SONARR__QUALITY_PROFILE: HD - 720p/1080p
-              SONARR__ROOTFOLDER: /data/media/tv
-              SONARR__URL: http://sonarr:8989
+                    name: doplarr-secret
+                    key: API_KEY
+              OVERSEERR__DEFAULT_ID: 126149318766886912
+#              RADARR__API:
+#                valueFrom:
+#                  secretKeyRef:
+#                    key: APIKEY
+#                    name: radarr-secret
+#              RADARR__QUALITY_PROFILE: HD - 720p/1080p
+#              RADARR__ROOTFOLDER: /data/media/movies
+#              RADARR__URL: http://radarr:7878
+#              SONARR__API:
+#                valueFrom:
+#                  secretKeyRef:
+#                    key: APIKEY
+#                    name: sonarr-apikey
+#              SONARR__QUALITY_PROFILE: HD - 720p/1080p
+#              SONARR__ROOTFOLDER: /data/media/tv
+#              SONARR__URL: http://sonarr:8989
               DISCORD__TOKEN:
                 valueFrom:
                   secretKeyRef:
                     key: TOKEN
-                    name: discord-token
+                    name: doplarr-secret
             image:
               repository: ghcr.io/kiranshila/doplarr
               tag: v3.6.3
