Enable custom kube state metrics for flux

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -34,10 +34,10 @@ spec:
           - "/metadata/annotations/prometheus-operator-validated"
         target:
           kind: PrometheusRule
-#  valuesFrom:
-#    - kind: ConfigMap
-#      name: flux-kube-state-metrics-config
-#      valuesKey: kube-state-metrics-config.yaml
+  valuesFrom:
+    - kind: ConfigMap
+      name: flux-kube-state-metrics-config
+      valuesKey: kube-state-metrics-config.yaml
   values:
     namespaceOverride: "monitoring"
     defaultRules:
