--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -90,9 +90,9 @@ spec:
                   timeoutSeconds: 1
                   failureThreshold: 5
             resources:
-              limits:
-                cpu: 1500m
-                memory: 1Gi
+#              limits:
+#                cpu: 1500m
+#                memory: 1Gi
               requests:
                 cpu: 1000m
                 memory: 500m
