--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -22,15 +22,16 @@ resources:
 #  - ./istio.yaml
 #  - ./portainer.yaml
   - ./grafana.yaml
-  - ./jaeger.yaml
+#  - ./jaeger.yaml
 #  - ./komodor.yaml
 #  - ./linkerd.yaml
-  - ./otel.yaml
-  - ./uptrace.yaml
+#  - ./otel.yaml
+#  - ./uptrace.yaml
 #  - ./linkerd-smi.yaml
   - ./onechart.yaml
-  - ./authentik.yaml
+#  - ./authentik.yaml
 #  - ./kubeshark.yaml
   - ./rocket-chat.yaml
   - ./robusta.yaml
-  - ./mailu.yaml
+#  - ./mailu.yaml
+  - ./csi-driver-nfs.yaml
