--- a/kubernetes/apps/kube-system/nfs-csi-driver/csi-driver-nfs.yaml
+++ b/kubernetes/apps/kube-system/nfs-csi-driver/csi-driver-nfs.yaml
@@ -27,6 +27,7 @@ spec:
     controller:
       dnsPolicy: Default
       defaultOnDeletePolicy: retain
+      runOnControlPlane: true
     node:
       dnsPolicy: Default
     storageClass:
