--- a/kubernetes/apps/network/external-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/external-dns/app/helmrelease.yaml
@@ -21,28 +21,70 @@ spec:
     cleanupOnFail: true
     crds: CreateReplace
     remediation:
+      remediateLastFailure: true
       strategy: rollback
       retries: 3
   values:
     fullnameOverride: *app
-    provider: cloudflare
-    env:
-      - name: CF_API_TOKEN
-        valueFrom:
-          secretKeyRef:
-            name: external-dns-secret
-            key: api-token
+    provider: webhook
+    sidecars:
+      - name: adguard-webhook
+        image: ghcr.io/muhlba91/external-dns-provider-adguard:v8.0.0
+        ports:
+          - containerPort: 8888
+            name: http
+          - containerPort: 8080
+            name: healthz
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: healthz
+          initialDelaySeconds: 10
+          timeoutSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /healthz
+            port: healthz
+          initialDelaySeconds: 10
+          timeoutSeconds: 5
+        env:
+          - name: LOG_LEVEL
+            value: debug
+          - name: ADGUARD_URL
+            valueFrom:
+              secretKeyRef:
+                name: adguard-configuration
+                key: url
+          - name: ADGUARD_USER
+            valueFrom:
+              secretKeyRef:
+                name: adguard-configuration
+                key: user
+          - name: ADGUARD_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: adguard-configuration
+                key: password
+          - name: DRY_RUN
+            value: "false"
+    #    env:
+    #      - name: CF_API_TOKEN
+    #        valueFrom:
+    #          secretKeyRef:
+    #            name: external-dns-secret
+    #            key: api-token
     extraArgs:
-      - --ingress-class=external
-      - --cloudflare-proxied
-      - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
-      - --crd-source-kind=DNSEndpoint
+      - webhook-provider-url: http://localhost:8888
+    #      - --ingress-class=external
+    #      - --cloudflare-proxied
+    #      - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
+    #      - --crd-source-kind=DNSEndpoint
     policy: sync
-    sources: ["crd", "ingress"]
+    sources: [ "crd", "ingress" ]
     txtPrefix: k8s.
     txtOwnerId: default
-    domainFilters: ["${SECRET_DOMAIN}"]
+    domainFilters: [ "${SECRET_DOMAIN}" ]
     serviceMonitor:
       enabled: true
     podAnnotations:
-      secret.reloader.stakater.com/reload: external-dns-secret
+      secret.reloader.stakater.com/reload: adguard-configuration
