--- a/kubernetes/apps/network/external-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/external-dns/app/helmrelease.yaml
@@ -74,7 +74,7 @@ spec:
     #            name: external-dns-secret
     #            key: api-token
     extraArgs:
-      - webhook-provider-url: http://localhost:8888
+      - --webhook-provider-url=http://localhost:8888
     #      - --ingress-class=external
     #      - --cloudflare-proxied
     #      - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
