--- a/kubernetes/apps/network/external-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/external-dns/app/helmrelease.yaml
@@ -26,27 +26,14 @@ spec:
       retries: 3
   values:
     fullnameOverride: *app
-    provider: webhook
-    sidecars:
-      - name: adguard-webhook
-        image: ghcr.io/muhlba91/external-dns-provider-adguard:v8.0.0
-        ports:
-          - containerPort: 8888
-            name: http
-          - containerPort: 8080
-            name: healthz
-        livenessProbe:
-          httpGet:
-            path: /healthz
-            port: healthz
-          initialDelaySeconds: 10
-          timeoutSeconds: 5
-        readinessProbe:
-          httpGet:
-            path: /healthz
-            port: healthz
-          initialDelaySeconds: 10
-          timeoutSeconds: 5
+    provider:
+      name: adguard
+      adguard:
+        image:
+          repository: ghcr.io/muhlba91/external-dns-provider-adguard
+          tag: v8.0.0
+        service:
+          port: 8888
         env:
           - name: LOG_LEVEL
             value: debug
@@ -67,18 +54,8 @@ spec:
                 key: password
           - name: DRY_RUN
             value: "false"
-    #    env:
-    #      - name: CF_API_TOKEN
-    #        valueFrom:
-    #          secretKeyRef:
-    #            name: external-dns-secret
-    #            key: api-token
     extraArgs:
       - --webhook-provider-url=http://localhost:8888
-    #      - --ingress-class=external
-    #      - --cloudflare-proxied
-    #      - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
-    #      - --crd-source-kind=DNSEndpoint
     policy: sync
     sources: [ "crd", "ingress" ]
     txtPrefix: k8s.
