Run external dns as a webhook with adguard sidecar

--- a/kubernetes/apps/network/external-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/external-dns/app/helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
 #      - --webhook-provider-url=http://localhost:8888
     policy: sync
     sources: [ "crd", "ingress" ]
-    txtPrefix: adguard.
+    txtPrefix: k8s.
     txtOwnerId: default
     domainFilters: [ "${SECRET_DOMAIN}" ]
     serviceMonitor:
