Simplify rocketchat helm release

--- a/kubernetes/apps/default/rocketchat/rocket-chat.yaml
+++ b/kubernetes/apps/default/rocketchat/rocket-chat.yaml
@@ -37,7 +37,7 @@ spec:
         storageClass: nfs-csi
         size: 8Gi
       auth:
-        usernames: [ ]
+        usernames: [ rocketchat ]
         passwords: [ ]
         databases: [ rocketchat ]
         existingSecret: mongodb-secret
