Simplify rocketchat helm release

--- a/kubernetes/apps/default/rocketchat/rocket-chat.yaml
+++ b/kubernetes/apps/default/rocketchat/rocket-chat.yaml
@@ -38,6 +38,6 @@ spec:
         size: 8Gi
       auth:
         usernames: [ rocketchat ]
-        passwords: [ ]
+        passwords: [ rocketchat ]
         databases: [ rocketchat ]
         existingSecret: mongodb-secret
