Simplify rocketchat helm release

--- a/kubernetes/apps/default/rocketchat/rocket-chat.yaml
+++ b/kubernetes/apps/default/rocketchat/rocket-chat.yaml
@@ -18,6 +18,9 @@ spec:
   releaseName: rocket-chat
   targetNamespace: default
   values:
+    global:
+      annotations:
+        secret.reloader.stakater.com/reload: "mongodb-secret"
     existingMongodbSecret: mongodb-secret
     host: &host chat.internal.${SECRET_DOMAIN}
     persistence:
