Simplify rocketchat helm release

--- a/kubernetes/apps/default/rocketchat/secret.sops.yaml
+++ b/kubernetes/apps/default/rocketchat/secret.sops.yaml
@@ -5,12 +5,12 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    mongodb-passwords: ENC[AES256_GCM,data:kFCIL824+IkMXsyRKZehajAa+LlKtJ0HX5ZcDRc7XgM=,iv:ljkQtzUSy5ubhFdHzzJxVaX1+grncOzGevRxqkm9Yq4=,tag:QaWU9lnhjeSYuD3CBWVs5Q==,type:str]
-    mongodb-root-password: ENC[AES256_GCM,data:UZkYd5M6aIWaqUjGv9E3N1OkKoTMoLNV8bv4aBB0tBg=,iv:b2du/tpFcEZYaBe1UGz3yKL8s+FHCFUCWeSsH7Sq2HQ=,tag:kS+OPd7D6uw4WVXLe3UIpg==,type:str]
-    mongodb-metrics-password: ENC[AES256_GCM,data:8uH2Ci6oDrROU+j4gtqNNFLDMpxARypDEn8PxdYy79k=,iv:k+S2A0vq8hJdyhnr+sM8fV0/EsWOhl8nt64/G/A+6+Q=,tag:vwvZIYJOJk6WWz+DY55Oqg==,type:str]
-    mongodb-replica-set-key: ENC[AES256_GCM,data:6DM6s/tAjAZmF/rv141e9sJIQQN6l6thobGRVwnaXBk=,iv:dJBB9mRcZ9mXzx9SUzLfJnIUWHQQbVhJYj6AcJ9/4hM=,tag:TAxSL8ybroj09fHlamIWeA==,type:str]
-    mongo-uri: ENC[AES256_GCM,data:3uo9W/naHfpX9HPD7asdt+9aNbsz27U9DVzOaUBoozER7cWgjqYOvFY4kPQXZygI2121II8I8n04UjFQIqouduHAHAgfUWiEByjRNIV3VopU+mS6KOqPsKlBw+l3DYZyTJD5,iv:jWHKL5ScVGs4ycBMfmKoOsq/p7tzgr4SMOkw27rJvIU=,tag:NzTj1HECwd3T2tR+ToPsJw==,type:str]
-    mongo-oplog-uri: ENC[AES256_GCM,data:Vu8XYaK74ylA663FldGStaqVNVerSltURfSnlTWdsTEVOMDrjkJq6R4AB5Am5WRFGqJp4XnmtohJ1BWTO8ssfDHcY4eQjfCW7aOGy5czkOgkiEAHG0YrIgHyS/KPPeUvolZydfoXpdUI7oaSzxt2E/p6uDC6ZE5+,iv:EqkwZ08u+bj7j/EHQrItRIV2IRe5TaagNJu8NwMe3ak=,tag:Mwn3InaM7IDv1/Et4iBKHA==,type:str]
+    mongodb-passwords: ENC[AES256_GCM,data:RqucuPsCzUthXw==,iv:qY855CgGbF0gbfyZTuzCTPBS1Vzpk1LaL2WJTsBfDAk=,tag:hbVhum6ytRg78em0FeNrPA==,type:str]
+    mongodb-root-password: ENC[AES256_GCM,data:RCYKQNMsorjHsw==,iv:4YdyVzunuovxrXTQeQaIjikzcrI/gPkMwQUKPc7mEEY=,tag:lFg320xDWQHJ7boXr4oNNg==,type:str]
+    mongodb-metrics-password: ENC[AES256_GCM,data:ZlksWaDWcYYEUw==,iv:AHe/1k2Go/B4DtrWzT8WAoIVrfLXEj3qbYJr842gGIA=,tag:iNG6rwAOxAsndw/DbebuHQ==,type:str]
+    mongodb-replica-set-key: ENC[AES256_GCM,data:gcaov+qEyOObJw==,iv:Rbj8S7F3DkvAmDNf+V5QuQCizUMfnPns/MIUZ51xgH0=,tag:jRwXVx6mZGOJGLRi8RfPnA==,type:str]
+    mongo-uri: ENC[AES256_GCM,data:zOEX3oztw9tq9FuXcLVmm46QNXaIEQV8WpQiraNdbm6h0JCVXts0TJx8r12MK98+u8XW0yaNMWu+rDHt+X0RoVeEuDkq8+zyxe/gPIk=,iv:zmFIMa3wIWty0TDSCUWRVHgL71Bd9RLlFurdeH6G9JA=,tag:LeKG37Azzdf4/DKxsi8pIw==,type:str]
+    mongo-oplog-uri: ENC[AES256_GCM,data:TYSf1jobAWM3oCldfV7PDSC90ZvFnpPvBGe1Xwh7gYpZ2tGGgNrIIfrMgM/j056iV6Xir/H3WpbvjZL2QuQxIaXrCzbXK5KffY0L3k0K8Hqk4Huqqccjj8NvXZRwxcavoF0=,iv:LhQ934rHrvlYSWCi6GiEBFOfHtViKMI4e79ZOqaG3KI=,tag:pwKP9Qxkn2Pi/C2rMLL63g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +26,8 @@ sops:
             Yy9hR1NsaXUyZFRPemxzVHVNVW5MOU0Kq32or11Vl33wT2dUbnjTYVr+0J8DZJXw
             kkLaKI5JFwOsQzKze3pNhig53/G3RB+BDMBRBxmhAI3x1pljuSzE2w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-22T16:27:46Z"
-    mac: ENC[AES256_GCM,data:vCDLLaaW2HtSnc8SQFDYXMrRTa2CmSdsWBISYRWv1Q8n9PrJQ8OVkKX77cls9otkENr1GmjeeMRF/mQTXgHg5QJmRhlHGN5izU9TLgYVGsa3nYnAuDeJDnaD1rcX3R1atvZzn/Rg6PWrknT+0DJdv9v2sQikJgPqaCwgDBsLgKM=,iv:CX5rw/88tDbl2CXA3pkR9HrZ61reiBXWGOutOxmx0Cw=,tag:Cv7vLi1VYiEAjzq24yZo5A==,type:str]
+    lastmodified: "2024-10-31T18:07:28Z"
+    mac: ENC[AES256_GCM,data:6s8m7C+WjYPuqZlaF8VLOXcTEMuaZ0cIWGEkCi2C7D9Ce2+x+Egu+rP4Qbv25cgbHnF17SsQV47/4gOiv0HDDrWGmaIwM+SM85wId3YuVhNajSAIOpk9YKF4wpRtrcsZ80ryp53c4wBV1iiH53FCZIEf4d8CqfGq6+T4EF8159I=,iv:4Ca0dO4P1eYPu+2zjBHNLXB5kQUp1t4SlAc9VFflvVc=,tag:kgw01tEqSVyOAZxemOM2sw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
