Simplify rocketchat helm release

--- a/kubernetes/apps/default/rocketchat/rocket-chat.yaml
+++ b/kubernetes/apps/default/rocketchat/rocket-chat.yaml
@@ -29,6 +29,7 @@ spec:
       size: 8Gi
     ingress:
       enabled: true
+      ingressClassName: cilium
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
       tls:
