Add sonarr youtubedl sidecar

--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -115,7 +115,7 @@ spec:
         advancedMounts:
           main:
             sonarr-youtubedl:
-              - path: /config
+              - path: /sonarr-youtubedl-config
                 readOnly: false
       config:
         accessMode: ReadWriteOnce
