--- a/kubernetes/apps/default/lutho/lutho.yaml
+++ b/kubernetes/apps/default/lutho/lutho.yaml
@@ -13,6 +13,7 @@ spec:
         kind: HelmRepository
         name: kubeflame
         namespace: flux-system
+      version: 0.1.3
   interval: 24h
   releaseName: lutho
   targetNamespace: default
