Test custom lutho container

--- a/kubernetes/apps/default/lutho/lutho.yaml
+++ b/kubernetes/apps/default/lutho/lutho.yaml
@@ -18,6 +18,10 @@ spec:
   releaseName: lutho
   targetNamespace: default
   values:
+    image:
+      repository: stiforr/lutho
+      pullPolicy: Always
+      tag: ""
     ingress:
       enabled: true
       className: internal
