--- a/kubernetes/apps/default/lutho/lutho.yaml
+++ b/kubernetes/apps/default/lutho/lutho.yaml
@@ -29,7 +29,7 @@ spec:
     image:
       repository: stiforr/lutho
       pullPolicy: Always
-      tag: latest
+      tag: testing-1
     ingress:
       enabled: true
       className: internal
