--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -6,6 +6,8 @@ metadata:
 type: Opaque
 stringData:
     APIKEY: ENC[AES256_GCM,data:pMg0,iv:+OndVUhYH2+VsdVF3agHnf2myr+fyZ54QHOQ+3UP7j0=,tag:K2nA1PJZ/SgjMJvs0n9F/g==,type:str]
+    AUTH_PASSWORD: ENC[AES256_GCM,data:yN3ljIXk,iv:867cs/Oy0WmihyU87eMs9HUYdEQs7JYpW43Gn8xK7X4=,tag:4tMNT3U61JlXwBSCG7etLw==,type:str]
+    AUTH_USERNAME: ENC[AES256_GCM,data:KAZf+r3mEg==,iv:4rDH4tjt7hw0e0MFpYyxqxxFVuT43vpA6EV3wSVrVTE=,tag:oFdLcZgyBM2KRlxrShfmjA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +23,8 @@ sops:
             NExiZE1BcGNGY3RuWk41eWt6UjIwaWcKpJjcWyAO9k53m73KbB9geeZoXw105a/U
             hXJy+82qHd5s4TL2OlkJ8roB5r4jPr/2ApUmVNrqB978ps/wjiNo5g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-22T03:50:42Z"
-    mac: ENC[AES256_GCM,data:mh+V4MSKN3qlGduBbxmTYjLr1zMIu3IPcYfjIjEEwgur6+DL7Wd0ls9T84/uWTLZzlB2iV5GAteNn8KWgNDjFjLN4+JD+1pT7UarPXSV++ZkrOYXqB6R4B2aSSuknrAtfGmAHis71OITiiyiOWAB09rnymLEl0iGmVNoX8LRGDY=,iv:I50CDR8soff1tu8znysluqHQxiL7zomf/CNOSVq4L2Y=,tag:rDsAttsdfTaoTM63w/m4aQ==,type:str]
+    lastmodified: "2024-11-07T16:02:54Z"
+    mac: ENC[AES256_GCM,data:nyPhwZkk9XWs9nPYLab0cUvTmOWXxHBj2wpl1PAa9VuKCSQHp+eRkt3iDkvnBY5wTga7BUkj2Gnn2SOzgM5FNNY3Wv7wKxXheUW7LrZ3/TOfUnAFDGT7iwdH/wSMyAbayYhWqKQhZs+jmYzQ6/3AYb52DW9wDvB1hU9KZCDn/3U=,iv:R8tYyeqKJmiECIhb+j/1ozZSBR68VwRAqzN8qs+mChA=,tag:dCGqFQIhvirEw+ScSYw+GQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
