--- a/kubernetes/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/bootstrap/talos/talconfig.yaml
@@ -3,16 +3,16 @@
 # renovate: datasource=docker depName=ghcr.io/siderolabs/installer
 talosVersion: v1.8.1
 # renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
-kubernetesVersion: v1.31.1
+kubernetesVersion: v1.31.2
 
 clusterName: "home-kubernetes"
-endpoint: https://192.168.1.201:6443
+endpoint: https://192.168.2.201:6443
 clusterPodNets:
   - "10.69.0.0/16"
 clusterSvcNets:
   - "10.96.0.0/16"
 additionalApiServerCertSans: &sans
-  - "192.168.1.201"
+  - "192.168.2.201"
   - 127.0.0.1 # KubePrism
 additionalMachineCertSans: *sans
 
@@ -22,7 +22,7 @@ cniConfig:
 
 nodes:
   - hostname: "controller"
-    ipAddress: "192.168.1.135"
+    ipAddress: "192.168.2.11"
     installDisk: "/dev/sda"
     talosImageURL: factory.talos.dev/installer/ce4c980550dd2ab1b17bbf2b08801c7eb59418eafe8f279833297925d67c7515
     controlPlane: true
@@ -31,20 +31,20 @@ nodes:
           hardwareAddr: "bc:24:11:eb:3a:9a"
         dhcp: false
         addresses:
-          - "192.168.1.135/24"
+          - "192.168.2.11/24"
         routes:
           - network: 0.0.0.0/0
-            gateway: "192.168.1.254"
+            gateway: "192.168.2.1"
         mtu: 1500
         vip:
-          ip: "192.168.1.201"
+          ip: "192.168.2.201"
     patches:
       - "@./patches/controller/api-access.yaml"
       - "@./patches/controller/cluster.yaml"
       - "@./patches/controller/disable-admission-controller.yaml"
       - "@./patches/controller/etcd.yaml"
   - hostname: "worker"
-    ipAddress: "192.168.1.171"
+    ipAddress: "192.168.2.12"
     installDisk: "/dev/sda"
     talosImageURL: factory.talos.dev/installer/ce4c980550dd2ab1b17bbf2b08801c7eb59418eafe8f279833297925d67c7515
     controlPlane: false
@@ -53,25 +53,10 @@ nodes:
           hardwareAddr: "bc:24:11:eb:34:34"
         dhcp: false
         addresses:
-          - "192.168.1.171/24"
+          - "192.168.2.12/24"
         routes:
           - network: 0.0.0.0/0
-            gateway: "192.168.1.254"
-        mtu: 1500
-  - hostname: "worker-2"
-    ipAddress: "192.168.1.178"
-    installDisk: "/dev/sda"
-    talosImageURL: factory.talos.dev/installer/ce4c980550dd2ab1b17bbf2b08801c7eb59418eafe8f279833297925d67c7515
-    controlPlane: false
-    networkInterfaces:
-      - deviceSelector:
-          hardwareAddr: "bc:24:11:0d:b8:c6"
-        dhcp: false
-        addresses:
-          - "192.168.1.178/24"
-        routes:
-          - network: 0.0.0.0/0
-            gateway: "192.168.1.254"
+            gateway: "192.168.2.1"
         mtu: 1500
 
 # Global patches
@@ -103,6 +88,6 @@ controlPlane:
   patches:
     - "@./patches/controller/api-access.yaml"
     - "@./patches/controller/cluster.yaml"
-    - "@./patches/controller/disable-admission-controller.yaml"
+#    - "@./patches/controller/disable-admission-controller.yaml"
     - "@./patches/controller/etcd.yaml"
 
