--- a/kubernetes/apps/network/external-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/external-dns/app/helmrelease.yaml
@@ -21,47 +21,28 @@ spec:
     cleanupOnFail: true
     crds: CreateReplace
     remediation:
-      remediateLastFailure: true
       strategy: rollback
       retries: 3
   values:
     fullnameOverride: *app
-    provider:
-      name: webhook
-      webhook:
-        image:
-          repository: ghcr.io/muhlba91/external-dns-provider-adguard
-          tag: v8.0.0
-        service:
-          port: 8888
-        env:
-          - name: LOG_LEVEL
-            value: debug
-          - name: ADGUARD_URL
-            valueFrom:
-              secretKeyRef:
-                name: adguard-configuration
-                key: url
-          - name: ADGUARD_USER
-            valueFrom:
-              secretKeyRef:
-                name: adguard-configuration
-                key: user
-          - name: ADGUARD_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: adguard-configuration
-                key: password
-          - name: DRY_RUN
-            value: "false"
-#    extraArgs:
-#      - --webhook-provider-url=http://localhost:8888
+    provider: cloudflare
+    env:
+      - name: CF_API_TOKEN
+        valueFrom:
+          secretKeyRef:
+            name: external-dns-secret
+            key: api-token
+    extraArgs:
+      - --ingress-class=external
+      - --cloudflare-proxied
+      - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
+      - --crd-source-kind=DNSEndpoint
     policy: sync
-    sources: [ "crd", "ingress" ]
+    sources: ["crd", "ingress"]
     txtPrefix: k8s.
     txtOwnerId: default
-    domainFilters: [ "${SECRET_DOMAIN}" ]
+    domainFilters: ["${SECRET_DOMAIN}"]
     serviceMonitor:
       enabled: true
     podAnnotations:
-      secret.reloader.stakater.com/reload: adguard-configuration
+      secret.reloader.stakater.com/reload: external-dns-secret
